calico-policies/private-network-isolation/us-south/allow-egress-pods-private.yaml
# This policy opens port 53 and 5353 for DNS,
# port 2049 for communication with NFS file servers,
# ports 443 and 3260 for communication to block storage,
# port 10250 for the openVPN pod, port 4443 or 6443 for metrics-server, and
# port 2040 and 2041 on 172.21.0.0/24 for the master API server local proxy. It also
# allows pod access to other pods, denies access to private networks but allows access to
# public networks, and allows access in each zone of the region to the master.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-private
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 4443 # Kubernetes 1.19 or later
      - 6443 # OpenShift 4.3 or later
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      selector: projectcalico.org/orchestrator == 'k8s'
    source: {}
  # Denies pod egress to private networks. If workers are connected to a public VLAN,
  # pod egress is permitted to public networks.
  - action: Allow
    destination:
      notNets:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-south: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.12.151/32
      - 166.9.12.153/32
      - 166.9.12.192/32
      - 166.9.12.193/32
      - 166.9.12.194/32
      - 166.9.12.196/32
      - 166.9.12.233/32
      - 166.9.12.253/32
      - 166.9.12.26/32
      - 166.9.12.99/32
      - 166.9.13.31/32
      - 166.9.13.92/32
      - 166.9.13.93/32
      - 166.9.13.94/32
      - 166.9.13.95/32
      - 166.9.14.121/32
      - 166.9.14.122/32
      - 166.9.14.124/32
      - 166.9.14.125/32
      - 166.9.14.201/32
      - 166.9.14.202/32
      - 166.9.14.203/32
      - 166.9.14.204/32
      - 166.9.14.205/32
      - 166.9.14.206/32
      - 166.9.14.94/32
      - 166.9.14.95/32
      - 166.9.15.130/32
      - 166.9.15.132/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.73/32
      - 166.9.15.75/32
      - 166.9.16.112/32
      - 166.9.16.113/32
      - 166.9.16.137/32
      - 166.9.16.146/32
      - 166.9.16.147/32
      - 166.9.16.149/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      - 166.9.16.39/32
      - 166.9.16.5/32
      - 166.9.17.2/32
      - 166.9.17.254/32
      - 166.9.17.34/32
      - 166.9.17.35/32
      - 166.9.17.36/32
      - 166.9.17.37/32
      - 166.9.17.38/32
      - 166.9.17.39/32
      - 166.9.48.109/32
      - 166.9.48.124/32
      - 166.9.48.127/32
      - 166.9.48.170/32
      - 166.9.48.171/32
      - 166.9.48.175/32
      - 166.9.48.240/32
      - 166.9.48.35/32
      - 166.9.48.48/32
      - 166.9.48.50/32
      - 166.9.48.76/32
      - 166.9.51.104/32
      - 166.9.51.105/32
      - 166.9.51.106/32
      - 166.9.51.107/32
      - 166.9.51.16/32
      - 166.9.51.247/32
      - 166.9.51.3/32
      - 166.9.51.54/32
      - 166.9.51.55/32
      - 166.9.51.74/32
      - 166.9.51.76/32
      - 166.9.58.103/32
      - 166.9.58.104/32
      - 166.9.58.11/32
      - 166.9.58.16/32
      - 166.9.58.170/32
      - 166.9.58.180/32
      - 166.9.58.210/32
      - 166.9.58.234/32
      - 166.9.58.4/32
      - 166.9.58.49/32
      - 166.9.58.64/32
      - 166.9.58.65/32
      - 166.9.58.69/32
      - 166.9.59.125/32
      - 166.9.59.126/32
      - 166.9.59.147/32
      - 166.9.59.174/32
      - 166.9.59.7/32
      - 166.9.61.15/32
      - 166.9.61.2/32
      - 166.9.61.25/32
      - 166.9.61.54/32
      - 166.9.85.102/32
      - 166.9.85.114/32
      - 166.9.85.115/32
      - 166.9.88.186/32
      - 166.9.88.196/32
      - 166.9.88.197/32
      - 166.9.88.21/32
      - 166.9.88.22/32
      - 166.9.228.8/32
      - 166.9.229.10/32
      - 166.9.230.9/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-south: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.12.151/32
      - 166.9.12.153/32
      - 166.9.12.192/32
      - 166.9.12.193/32
      - 166.9.12.194/32
      - 166.9.12.196/32
      - 166.9.12.233/32
      - 166.9.12.253/32
      - 166.9.12.26/32
      - 166.9.12.99/32
      - 166.9.13.31/32
      - 166.9.13.92/32
      - 166.9.13.93/32
      - 166.9.13.94/32
      - 166.9.13.95/32
      - 166.9.14.121/32
      - 166.9.14.122/32
      - 166.9.14.124/32
      - 166.9.14.125/32
      - 166.9.14.201/32
      - 166.9.14.202/32
      - 166.9.14.203/32
      - 166.9.14.204/32
      - 166.9.14.205/32
      - 166.9.14.206/32
      - 166.9.14.94/32
      - 166.9.14.95/32
      - 166.9.15.130/32
      - 166.9.15.132/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.73/32
      - 166.9.15.75/32
      - 166.9.16.112/32
      - 166.9.16.113/32
      - 166.9.16.137/32
      - 166.9.16.146/32
      - 166.9.16.147/32
      - 166.9.16.149/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      - 166.9.16.39/32
      - 166.9.16.5/32
      - 166.9.17.2/32
      - 166.9.17.254/32
      - 166.9.17.34/32
      - 166.9.17.35/32
      - 166.9.17.36/32
      - 166.9.17.37/32
      - 166.9.17.38/32
      - 166.9.17.39/32
      - 166.9.48.109/32
      - 166.9.48.124/32
      - 166.9.48.127/32
      - 166.9.48.170/32
      - 166.9.48.171/32
      - 166.9.48.175/32
      - 166.9.48.240/32
      - 166.9.48.35/32
      - 166.9.48.48/32
      - 166.9.48.50/32
      - 166.9.48.76/32
      - 166.9.51.104/32
      - 166.9.51.105/32
      - 166.9.51.106/32
      - 166.9.51.107/32
      - 166.9.51.16/32
      - 166.9.51.247/32
      - 166.9.51.3/32
      - 166.9.51.54/32
      - 166.9.51.55/32
      - 166.9.51.74/32
      - 166.9.51.76/32
      - 166.9.58.103/32
      - 166.9.58.104/32
      - 166.9.58.11/32
      - 166.9.58.16/32
      - 166.9.58.170/32
      - 166.9.58.180/32
      - 166.9.58.210/32
      - 166.9.58.234/32
      - 166.9.58.4/32
      - 166.9.58.49/32
      - 166.9.58.64/32
      - 166.9.58.65/32
      - 166.9.58.69/32
      - 166.9.59.125/32
      - 166.9.59.126/32
      - 166.9.59.147/32
      - 166.9.59.174/32
      - 166.9.59.7/32
      - 166.9.61.15/32
      - 166.9.61.2/32
      - 166.9.61.25/32
      - 166.9.61.54/32
      - 166.9.85.102/32
      - 166.9.85.114/32
      - 166.9.85.115/32
      - 166.9.88.186/32
      - 166.9.88.196/32
      - 166.9.88.197/32
      - 166.9.88.21/32
      - 166.9.88.22/32
      - 166.9.228.8/32
      - 166.9.229.10/32
      - 166.9.230.9/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
