calico-policies/private-network-isolation/us-south/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-south: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.12.151/32
      - 166.9.12.153/32
      - 166.9.12.192/32
      - 166.9.12.193/32
      - 166.9.12.194/32
      - 166.9.12.196/32
      - 166.9.12.233/32
      - 166.9.12.253/32
      - 166.9.12.26/32
      - 166.9.12.99/32
      - 166.9.13.31/32
      - 166.9.13.92/32
      - 166.9.13.93/32
      - 166.9.13.94/32
      - 166.9.13.95/32
      - 166.9.14.121/32
      - 166.9.14.122/32
      - 166.9.14.124/32
      - 166.9.14.125/32
      - 166.9.14.201/32
      - 166.9.14.202/32
      - 166.9.14.203/32
      - 166.9.14.204/32
      - 166.9.14.205/32
      - 166.9.14.206/32
      - 166.9.14.94/32
      - 166.9.14.95/32
      - 166.9.15.130/32
      - 166.9.15.132/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.71/32
      - 166.9.15.72/32
      - 166.9.15.73/32
      - 166.9.15.75/32
      - 166.9.15.76/32
      - 166.9.16.112/32
      - 166.9.16.113/32
      - 166.9.16.137/32
      - 166.9.16.146/32
      - 166.9.16.147/32
      - 166.9.16.149/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      - 166.9.16.38/32
      - 166.9.16.39/32
      - 166.9.16.5/32
      - 166.9.17.2/32
      - 166.9.17.254/32
      - 166.9.17.34/32
      - 166.9.17.35/32
      - 166.9.17.36/32
      - 166.9.17.37/32
      - 166.9.17.38/32
      - 166.9.17.39/32
      - 166.9.48.109/32
      - 166.9.48.124/32
      - 166.9.48.127/32
      - 166.9.48.170/32
      - 166.9.48.171/32
      - 166.9.48.175/32
      - 166.9.48.240/32
      - 166.9.48.35/32
      - 166.9.48.48/32
      - 166.9.48.50/32
      - 166.9.48.76/32
      - 166.9.51.104/32
      - 166.9.51.105/32
      - 166.9.51.106/32
      - 166.9.51.107/32
      - 166.9.51.16/32
      - 166.9.51.247/32
      - 166.9.51.3/32
      - 166.9.51.54/32
      - 166.9.51.55/32
      - 166.9.51.74/32
      - 166.9.51.76/32
      - 166.9.58.103/32
      - 166.9.58.104/32
      - 166.9.58.11/32
      - 166.9.58.16/32
      - 166.9.58.170/32
      - 166.9.58.180/32
      - 166.9.58.210/32
      - 166.9.58.234/32
      - 166.9.58.4/32
      - 166.9.58.49/32
      - 166.9.58.64/32
      - 166.9.58.65/32
      - 166.9.58.69/32
      - 166.9.59.125/32
      - 166.9.59.126/32
      - 166.9.59.174/32
      - 166.9.59.7/32
      - 166.9.61.2/32
      - 166.9.85.102/32
      - 166.9.85.114/32
      - 166.9.85.115/32
      - 166.9.88.186/32
      - 166.9.88.196/32
      - 166.9.88.197/32
      - 166.9.88.21/32
      - 166.9.88.22/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-south: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.12.151/32
      - 166.9.12.153/32
      - 166.9.12.192/32
      - 166.9.12.193/32
      - 166.9.12.194/32
      - 166.9.12.196/32
      - 166.9.12.233/32
      - 166.9.12.253/32
      - 166.9.12.26/32
      - 166.9.12.99/32
      - 166.9.13.31/32
      - 166.9.13.92/32
      - 166.9.13.93/32
      - 166.9.13.94/32
      - 166.9.13.95/32
      - 166.9.14.121/32
      - 166.9.14.122/32
      - 166.9.14.124/32
      - 166.9.14.125/32
      - 166.9.14.201/32
      - 166.9.14.202/32
      - 166.9.14.203/32
      - 166.9.14.204/32
      - 166.9.14.205/32
      - 166.9.14.206/32
      - 166.9.14.94/32
      - 166.9.14.95/32
      - 166.9.15.130/32
      - 166.9.15.132/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.71/32
      - 166.9.15.72/32
      - 166.9.15.73/32
      - 166.9.15.75/32
      - 166.9.15.76/32
      - 166.9.16.112/32
      - 166.9.16.113/32
      - 166.9.16.137/32
      - 166.9.16.146/32
      - 166.9.16.147/32
      - 166.9.16.149/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      - 166.9.16.38/32
      - 166.9.16.39/32
      - 166.9.16.5/32
      - 166.9.17.2/32
      - 166.9.17.254/32
      - 166.9.17.34/32
      - 166.9.17.35/32
      - 166.9.17.36/32
      - 166.9.17.37/32
      - 166.9.17.38/32
      - 166.9.17.39/32
      - 166.9.48.109/32
      - 166.9.48.124/32
      - 166.9.48.127/32
      - 166.9.48.170/32
      - 166.9.48.171/32
      - 166.9.48.175/32
      - 166.9.48.240/32
      - 166.9.48.35/32
      - 166.9.48.48/32
      - 166.9.48.50/32
      - 166.9.48.76/32
      - 166.9.51.104/32
      - 166.9.51.105/32
      - 166.9.51.106/32
      - 166.9.51.107/32
      - 166.9.51.16/32
      - 166.9.51.247/32
      - 166.9.51.3/32
      - 166.9.51.54/32
      - 166.9.51.55/32
      - 166.9.51.74/32
      - 166.9.51.76/32
      - 166.9.58.103/32
      - 166.9.58.104/32
      - 166.9.58.11/32
      - 166.9.58.16/32
      - 166.9.58.170/32
      - 166.9.58.180/32
      - 166.9.58.210/32
      - 166.9.58.234/32
      - 166.9.58.4/32
      - 166.9.58.49/32
      - 166.9.58.64/32
      - 166.9.58.65/32
      - 166.9.58.69/32
      - 166.9.59.125/32
      - 166.9.59.126/32
      - 166.9.59.174/32
      - 166.9.59.7/32
      - 166.9.61.2/32
      - 166.9.85.102/32
      - 166.9.85.114/32
      - 166.9.85.115/32
      - 166.9.88.186/32
      - 166.9.88.196/32
      - 166.9.88.197/32
      - 166.9.88.21/32
      - 166.9.88.22/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
