calico-policies/private-network-isolation/us-south/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring, and IBM Cloud Logs.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global (US East) registry subnets
      - 166.9.251.49/32
      - 166.9.251.82/32
      - 166.9.251.113/32
      # IBM Cloud Container Registry: US South registry subnets
      - 166.9.250.214/32
      - 166.9.250.246/32
      - 166.9.251.21/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring ingest: us-south
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_ingestion_private
      - 166.9.14.170/32
      - 166.9.17.11/32
      - 166.9.48.41/32
      - 166.9.228.235/32
      - 166.9.229.31/32
      - 166.9.251.30/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring API: us-south
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_rest_api
      - 166.9.228.45/32
      - 166.9.229.45/32
      - 166.9.230.44/32
      - 166.9.228.235/32
      - 166.9.229.31/32
      - 166.9.251.30/32
      ports:
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: us-south
      # Taken from: https://cloud.ibm.com/docs/log-analysis?topic=log-analysis-endpoints
      - 166.9.12.12/32
      - 166.9.12.13/32
      - 166.9.14.2/32
      - 166.9.14.3/32
      - 166.9.16.11/32
      - 166.9.16.12/32
      # New IP addresses added on 1/19/2023
      - 166.9.90.41/32 
      - 166.9.85.89/32 
      - 166.9.61.79/32
      # New IP addresses added on 10/30/2023
      - 166.9.228.39/32
      - 166.9.229.39/32
      - 166.9.230.39/32
      # End new IP address list
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US South nets
      - 166.9.12.15/32
      - 166.9.14.5/32
      - 166.9.16.14/32
      ports:
      - 514
      - 6514
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US South nets
      - 166.9.12.16/32
      - 166.9.14.6/32
      - 166.9.16.15/32
      ports:
      - 514
    protocol: UDP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
